--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.1.0",
     "mongoose": "^6.3.2",
     "next": "12.1.6",
     "react": "18.1.0",
